<resources>
    <string name="app_name">Global project</string>
    <string name="hello_world">Hello World</string>
    <string name="title">other text\n</string>
    <string name="Messanger_Name">Messenger</string>
    <string name="Enter">Enter</string>
    <string name="password">Password</string>
    <string name="Phone_or_ID">Phone or ID</string>
    <string name="Forget_Password">Forget Password</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Confirm_Password">Conform password</string>
    <string name="passwords_do_not_match">passwords do not match</string>
    <string name="error_try_leter">error try leter</string>
    <string name="Incorrect_phone_number_entered">Incorrect phone number entered</string>
    <string name="short_password">password must be at least 6 characters long</string>
    <string name="eror_pass_ID">Incorect password or ID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messeges">Messeges</string>
    <string name="Search_for_messanges">Search for messages</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="chat">Chat</string>
    <string name="account_caps">ACCOUNT</string>
    <string name="options_caps">OPTIONS</string>
    <string name="TypeHere">Type Here ...</string>
    <string name="Changing_app_theme_color_to_dark">Changing app theme color to dark</string>
    <string name="Dark_Mode">Dark Mode</string>
    <string name="Logout">Logout</string>
    <string name="Sign_out_of_your_account_on_this_device">Sign out of your account on this device</string>
    <string name="cancel">Cancel</string>
    <string name="Save">Save</string>
    <string name="New_Contact">New Contact</string>
    <string name="Name">Name</string>
    <string name="Surname">Surname</string>
    <string name="Number">Number</string>
    <string name="Full_Name">Full Name</string>
    <string name="Big_message">Big massage max 200 symvols</string>
</resources>